# core-civilbit

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README.md  configure.ac  libcivilbitconsensus.pc.in
.tx/: config
build-aux/m4/: civilbit_find_bdb48.m4  civilbit_qt.m4  civilbit_subdir_to_include.m4
contrib/: README.md  civilbit-qt.pro  civilbitd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  civilbit-qt.install  civilbit-qt.lintian-overrides  civilbit-qt.protocol  civilbit-tx.install  civilbitd.bash-completion  civilbitd.examples  civilbitd.install  civilbitd.lintian-overrides  civilbitd.manpages  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  civilbitd.conf  civilbitd.init  civilbitd.openrc  civilbitd.openrcconf  civilbitd.service  org.civilbit.civilbitd.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  generate-seeds.py  makeseeds.py  nodes_main.txt  nodes_test.txt
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verify-commits/: gpg.sh  pre-push-hook.sh  verify-commits.sh
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
doc/release-notes/: release-notes-0.4.0.md  (+40 more)
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  alert.h  amount.h  arith_uint256.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  civilbit-cli-res.rc  civilbit-cli.cpp  civilbit-tx-res.rc  civilbit-tx.cpp  civilbitd-res.rc  civilbitd.cpp  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  (+60 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  civilbit.cpp  civilbit.qrc  civilbit_locale.qrc  civilbitaddressvalidator.cpp  civilbitaddressvalidator.h  civilbitamountfield.cpp  civilbitamountfield.h  civilbitgui.cpp  civilbitgui.h  civilbitstrings.cpp  civilbitunits.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  (+49 more)
src/qt/forms/: addressbookpage.ui  debugwindow.ui  helpmessagedialog.ui  optionsdialog.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: civilbit_en.ts  civilbit_en_GB.ts  civilbit_eu_ES.ts  civilbit_id_ID.ts  civilbit_la.ts  civilbit_ms_MY.ts  civilbit_pam.ts  civilbit_uz@Latn.ts
src/qt/res/: civilbit-qt-res.rc
src/qt/test/: paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: civilbitconsensus.cpp  civilbitconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_civilbit_NativeSecp256k1.c  org_civilbit_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  civilbit-util-test.py  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  script_P2SH_tests.cpp  (+17 more)
src/test/data/: README.md  civilbit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+81 files in other folders)
